<resources>
    <string name="app_name">Flight Tracker</string>
    <string name="enter_flight_code_e_g_aic308">Enter Flight Code (e.g., AIC308)</string>
    <string name="search">Search</string>
    <string name="departure_airport_e_g_del">Departure Airport (e.g., DEL)</string>
    <string name="arrival_airport_e_g_blr">Arrival Airport (e.g., BLR)</string>
    <string name="search_flights">Search Flights</string>
    <string name="average_flight_time_n_a">Average flight time: N/A</string>

    <string name="track_by_flight_code">Track by Flight Code</string>
    <string name="search_by_route">Search by Route</string>
    <string name="swap_airports">Swap airports</string>
    <string name="flight_results">Flight Results</string>
    <string name="departure">DEPARTURE</string>
    <string name="arrival">ARRIVAL</string>
    <string name="flight_direction">Flight direction</string>
</resources>